# cellid_api

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
sql/: cellular.sql
src/: cellular.py  db.py  populate.py  route.py  router.py  scraper.py  validator.py
tests/: conftest.py
tests/fictures/: cellular_fixture.py
tests/fixtures/: cellular_fixture.py
tests/src/: test_cellular.py  test_populate.py  test_route.py  test_validator.py
