[tool.poetry]
name = "upciti"
version = "0.1.0"
description = "OpencCell scraper for Upcity"
authors = ["Desjardins Alexis"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.12"
fastapi = "0.109.0"
uvicorn = "^0.26.0"
python-multipart = "0.0.6"
sqlalchemy = "2.0.25"
pandas = "2.1.4"
psycopg2 = "2.9.9"
geoalchemy2 = "0.14.3"

[tool.poetry.group.dev.dependencies]
black = "23.12.1"
pre-commit = "3.6.0"
pytest = "7.4.4"
pytest-asyncio = "0.23.3"
pytest-mock = "3.12.0"
pytest-cov = "4.1.0"
httpx = "0.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
